<resources>
    <string name="app_name">Cakebox</string>
    <string name="tag_line">Brought to you by :</string>
    <string name="app_logo_description">App Logo</string>
    <string name="brought_by"><i>Brought to you by</i></string>
    <string name="factory_name"><i>The Hazelnut Factory</i></string>
    <string name="back_arrow_description">Back</string>
    <string name="welcome_text">Welcome to the sweets\'heaven</string>
    <string name="login">Login</string>
    <string name="email_hint">user@email.com</string>
    <string name="password_hint">********</string>
    <string name="login_button_text">Enter</string>
    <string name="sign_out">Sign Out</string>
    <string name="check_in"><b>Check In</b></string>
    <string name="view_attendance">View Attendance</string>
    <string name="error_message">You are trying to mark attendance from an unauthorised email or entering a wrong password. Please have a look abd try again</string>
    <string name="take_me_back">Take me back</string>
    <string name="check_out">Check out</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="close">Exit app</string>
    <string name="error_title">Failed login.</string>
    <string name="oops">Oops !!!</string>
    <string name="invalid_place">Invalid place …</string>
    <string name="login_error">Authentication failed. Please check your username and password, then try again.</string>

</resources>