<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/error_background"
    tools:context=".ErrorActivity">

    <!-- Main Card, filling the rest of the screen -->
    <ImageButton
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_gravity="fill_vertical"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow_description"
        android:src="@drawable/ic_back_arrow"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="18dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Error Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/oops"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Error Icon -->
            <ImageView
                android:layout_width="268dp"
                android:layout_height="243dp"
                android:layout_gravity="center"
                android:contentDescription="@string/error_message"
                android:src="@drawable/ic_warning" />

            <!-- Error Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/error_title"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Error Message -->
            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_error"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="VisualLintLongText" />

            <!-- Take Me Back Button -->
            <Button
                android:id="@+id/take_me_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/blue"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/take_me_back"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
