<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Circular Camera Preview Section -->
    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/circular_background"
        app:layout_constraintBottom_toTopOf="@id/check_in_button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="185dp" />

    <LinearLayout
        android:id="@+id/check_in_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        android:baselineAligned="false"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="664dp">

        <!-- Check Out Button -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/sign_out"
            android:textColor="#546E7A"
            app:drawableStartCompat="@drawable/ic_home" />

        <!-- View Attendance Button -->

        <!-- View Attendance Button -->
        <TextView
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/circular_background_signin"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/check_in"
            android:textColor="@android:color/white"
            app:drawableStartCompat="@drawable/circular_background_signin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/view_attendance"
            android:textColor="#546E7A"
            app:drawableStartCompat="@drawable/ic_attendance" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
